--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,23 @@ a {
   text-decoration: none;
 }
 
+.heading {
+  color: #171100;
+  font-family: var(--font-heading);
+  font-weight: 700;
+  letter-spacing: -0.02em;
+}
+
+.heading.lv1 {
+  font-size: 5.8rem;
+  line-height: 1.17;
+}
+
+.heading.lv2 {
+  font-size: 3.8rem;
+  line-height: 1.26;
+}
+
 .btn {
   display: inline-block;
   min-width: 118px;
@@ -32,6 +49,11 @@ a {
   font-weight: 600;
   border-radius: 999px;
   background: #171100;
+}
+
+.btn:hover {
+  opacity: 0.9;
+  cursor: pointer;
 }
 
 .btn:hover {
@@ -109,7 +131,7 @@ a {
 
 /* =================Hero================== */
 .hero {
-  padding-top: 56px;
+  padding: 56px 0 65px;
   background-color: #fffcf4;
 }
 
@@ -129,6 +151,7 @@ a {
   height: 685px;
   object-fit: cover;
   border-radius: 20px;
+  vertical-align: bottom;
 }
 
 .media-block .hero-summary {
@@ -136,10 +159,11 @@ a {
   bottom: 48px;
   right: 0;
   width: 270px;
-  padding: 28px 24px;
+  padding: 24px;
   border-radius: 12px;
   background: #fff;
   box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+  flex-direction: column;
 }
 
 .hero-summary .icon {
@@ -152,12 +176,13 @@ a {
   background-color: #fff9e8;
 }
 
-.hero-summary .info {
-  margin-left: 16px;
-}
-
 .hero-summary .item {
   display: flex;
+  align-items: center;
+}
+
+.hero-summary .info {
+  margin-left: 16px;
 }
 
 .hero-summary .item + .item {
@@ -191,15 +216,6 @@ a {
 .hero .content-block {
   width: 52%;
   padding: 64px 0 0 130px;
-}
-
-.hero .heading {
-  color: #171100;
-  font-family: var(--font-heading);
-  font-size: 5.8rem;
-  font-weight: 700;
-  line-height: 1.17;
-  letter-spacing: -0.02em;
 }
 
 .hero .desc {
@@ -261,4 +277,133 @@ a {
   font-weight: 700;
   line-height: 1.23;
   margin-left: 28px;
+}
+
+/* =================Popular================== */
+
+.popular {
+  padding: 65px 0;
+  margin-top: 135px;
+}
+
+.popular .popular-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.popular .info {
+  width: 458px;
+}
+
+.popular .desc {
+  color: #5f5b53;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.67; /* 166.667% */
+  margin-top: 16px;
+}
+
+.popular .control {
+  display: flex;
+  gap: 18px;
+}
+
+.popular .control-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  background: transparent;
+}
+
+.popular .control-btn:hover {
+  color: #fff;
+  background: var(--primary-color);
+  cursor: pointer;
+}
+
+/* Course list */
+.popular .course-list {
+  display: flex;
+  gap: 30px;
+  margin-top: 55px;
+}
+
+.popular .course-item {
+  flex: 1;
+  border-radius: 12px;
+  border: 1px solid #e2dfda;
+  background: #fff;
+}
+
+.popular .course-item:hover {
+  border-color: transparent;
+  box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
+}
+
+.popular .course-item .rating,
+.popular .course-item .foot,
+.popular .course-item .head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.popular .course-item .thumb {
+  border-radius: 12px 12px 0px 0px;
+  width: calc(100% + 2px);
+  height: 278px;
+  object-fit: cover;
+  margin: -1px;
+}
+
+.popular .course-item .info {
+  padding: 16px 22px 22px;
+}
+
+.popular .title a {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67; /* 166.667% */
+}
+
+.popular .rating .value {
+  color: #fea31b;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+  margin-left: 6px;
+}
+
+.popular .course-item .desc {
+  color: #5f5b53;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.86; /* 185.714% */
+}
+
+.popular .course-item .foot {
+  margin-top: 12px;
+}
+
+.popular .foot .price {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67; /* 166.667% */
+}
+
+.popular .course-item .book-btn {
+  border: none;
+}
+
+.popular .course-item .book-btn:hover {
+  color: #fff;
+  background: var(--primary-color);
 }
